<resources>
    <string name="app_name">Asim Brown\'s Resume</string>
    <string name="action_settings">Settings</string>
    <string name="string1">Asim Brown: Web and Mobile Developer</string>
    <string name="pic_desc">professional image of me</string>
    <string name="my_name">Asim J. Brown</string>
    <string name="btnText1">View Resume</string>
    <string name="title_activity_landing_page">My Information</string>
    <string name="title_activity_aboutme">aboutme</string>
    <string name="about_me">About Me</string>
    <string name="work_history">Work History</string>
    <string name="education">Education</string>
    <string name="contact_me">Contact me</string>
    <string name="connect">Connect</string>
    <string name="aboutMeText1">Originally from Kansas City, MO. I went to high-school at L.C.P.A and then went on to college at the University of Missouri - St. Louis from which I graduated in 2019.</string>
    <string name="aboutMeText2">I started learning HTML in high-school in my free time. After that I progressed into learning JavaScript a little. Once in college I started my CS classes and began to learn C++ and Java. I didn\'t begin to learn web development until my senior year in college when I began to teach myself because it interested me. My mobile development journey started slightly after that.</string>
    <string name="aboutMeText3">I like to stay current on the different things that are going on within the industry, so I am constantly reading and trying out different things. I stay glued to Stack Exchange, Hackernoon and other sites that like to provide knowledge for the community. I also participate in Hackathons when I have the availability. It\'s important to stay up to date in this field and I pride myself on teaching my self new things.</string>
    <string name="title_activity_workHistory">Work History</string>

    <string name="honeyExp1">
            - Designed an Angular application to manage warehouse inventory, deliveries and pickups. I also integrated Dexie.JS to give the app local storage persistence functionality.
          This helped the warehouse to never lose data in the middle of operations or if they were offline.
    </string>
    <string name="honeyExp2">
            - Performed analysis of older apps and looked for ways to update them with new technologies or opportunities to upgrade the logic and tools they already used.
    </string>
    <string name="honeyExp3">
            - Upgraded a custom application that served as the main portal for IT information. Changed the framework from Angular Material to PrimeNG and added a search functionality to allow users to query company-approved software.
    </string>

    <string name="bayExp1">
            - Contributed to the Crop Science division by producing reports for analysis and budgeting teams.
    </string>
    <string name="bayExp2">
            - Collaborated closely with analysts to create procedures and guidelines to prepare the company for audits.
    </string>
    <string name="bayExp3">
            - Served as the main point of contact for the effort to redefine crop reporting techniques due to inefficiencies in the old process.
    </string>

    <string name="esExp1">
            - Worked on the largest company contract (Department of Defense)
    </string>
    <string name="esExp2">
            - Performed daily system and site checks to ensure pharmacy compliance with federal guidelines for prescription monitoring and issuing.
    </string>
    <string name="esExp3">
            - Collaborated with several military pharmacy sites to review script counts, patient admittance and other vital metrics to ensure that the sites are complying with federal guidelines and budget estimations.
    </string>

    <string name="arcExp1">
            - Assisted site leaders with daily technical issues which included account set up &amp; recovery. Managed current system users and resolved issues that arose.
    </string>
    <string name="arcExp2">
            - Assisted leaders remotely to troubleshoot issues while they were on site.
    </string>
    <string name="arcExp3">
            - Frequently used Active Directory to review, grant and deny access to various important company data stores.
    </string>

    <string name="thruExp1">
            - Created and maintained marketing campaigns for several colleges that were   a part of the company’s network.
    </string>
    <string name="thruExp2">
            - Made use of Facebook Pixels to track user’s engagement across our various platforms. We then used that data to make informed decisions about how we wanted to structure our sites and present information.
    </string>
    <string name="thruExp3">
            - Used Google Analytics to analyze our sites to find weaknesses in site design and areas where we could improve our content.
    </string>
    <string name="college">University of Missouri - St. Louis</string>
    <string name="educationHeader">College</string>
    <string name="major">Major</string>
    <string name="degree">B.S. Information Systems</string>
    <string name="phoneHeader">Cell Phone</string>
    <string name="phoneNumber">816-649-4738</string>
    <string name="emailHeader">Email</string>
    <string name="email">asimjbrown@gmail.com</string>
    <string name="githubHeader">Github Profile</string>
    <string name="gitLink">https://github.com/asimjb1200</string>
    <string name="linkedinHeader">LinkedIn</string>
    <string name="linkedinLink">https://www.linkedin.com/in/asim-brown-a6a273138/</string>
    <string name="stackHeader">Stack Overflow Profile</string>
    <string name="stackLink">https://stackoverflow.com/users/10667652/tank12</string>
</resources>
